--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
     <p>&copy; 2025 Bernardo Paranhos. Todos os direitos reservados.</p>
 </footer>
 
+<section class="quote-banner">
+    <p>"A confiança em si mesmo é o primeiro segredo do sucesso" <br> Ralph Waldo Emerson</p>
+</section>
+
     <script src="script.js"></script>
 </body>
 </html>
