Mudança simples no Hards SKills

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
                 </div>
                 <div class="skill-item">
                     <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
-                    <p>Item Hard Skill 2</p>
+                    <p>Phyton (iniciando)/PostgreSql</p>
                 </div>
             </div>
             <div class="skill-row single-item-center">
                 <div class="skill-item">
                     <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
-                    <p>Item Hard Skill 3 (Central)</p>
+                    <p>Excel/Power BI (básico)</p>
                 </div>
             </div>
         </div>
