Atualiza informações de educação: troca universidade e revisa textos.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span class="portfolio-title">Portfólio Engenharia de Produção</span>
                 <span class="name">BERNARDO PARANHOS</span>
                 <span class="role">Engenheiro de Produção Graduando</span>
-                <span class="keywords">SISTEMA | GESTÃO | DESIGN</span>
+                <span class="keywords">SISTEMAS | ENGENHARIA | OPERAÇÕES | OFFSHORE</span>
                 <div class="social-icons">
                     <a href="mailto:beparanhosborges@gmail.com" target="_blank" aria-label="Enviar e-mail">
                         <svg width="45px" height="45px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -68,7 +68,7 @@
 
         <div class="content-below">
             <h1 class="welcome-heading">Bem-vindo(a)!</h1>
-            <p class="welcome-text">Olá! Seja bem-vindo(a) ao meu portfólio. Sou <strong>Bernardo Paranhos</strong>, um Engenheiro de Produção com foco em <strong>Sistema, Gestão e Design</strong>. Aqui, você encontrará um pouco da minha trajetória e projetos. Sinta-se à vontade para explorar!</p>
+            <p class="welcome-text">Olá! Seja bem-vindo(a) ao meu portfólio. Sou <strong>Bernardo Paranhos</strong>, graduando Engenharia de Produção com interesse nas áreass de <strong>Sistema, Gestão, Logística e Operações Offshore</strong>. Aqui, você encontrará um pouco da minha trajetória, apredizados e projetos. Sinta-se à vontade para explorar!</p>
             
         </div>
     </section>
@@ -78,10 +78,10 @@
         
         <div class="education-item">
             <div class="education-logo">
-                <img src="image/Captura_de_tela_2025-07-12_020845-removebg-preview.png" alt="Logo da Universidade"> 
+                <img src="image/logo.utfpr.png" alt="Logo da Universidade"> 
             </div>
             <div class="education-details">
-                <h3>Universidade Federal Fluminese</h3>
+                <h3>Universidade Tecnológica Federal do Paraná</h3>
                 <p>Bacharelado - Engenharia de produção</p>
                 <p>Inicio no segundo semestre de 2025</p>
             </div>
@@ -89,7 +89,7 @@
                 <svg width="40px" height="40px" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--twemoji" preserveAspectRatio="xMidYMid meet"><path fill="#009B3A" d="M36 27a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V9a4 4 0 0 1 4-4h28a4 4 0 0 1 4 4v18z"></path><path fill="#FEDF01" d="M32.728 18L18 29.124L3.272 18L18 6.875z"></path><circle fill="#002776" cx="17.976" cy="17.924" r="6.458"></circle><path fill="#CBE9D4" d="M12.277 14.887a6.406 6.406 0 0 0-.672 2.023c3.995-.29 9.417 1.891 11.744 4.595c.402-.604.7-1.28.883-2.004c-2.872-2.808-7.917-4.63-11.955-4.614z"></path><path fill="#88C9F9" d="M12 18.233h1v1h-1zm1 2h1v1h-1z"></path><path fill="#55ACEE" d="M15 18.233h1v1h-1zm2 1h1v1h-1zm4 2h1v1h-1zm-3 1h1v1h-1zm3-6h1v1h-1z"></path><path fill="#3B88C3" d="M19 20.233h1v1h-1z"></path></svg>
                 <div class="location-details">
                     <p>2025 - 2030</p>
-                    <p>Angra dos Reis, Brasil</p>
+                    <p>Medianeira, Brasil</p>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
             <div class="skill-row">
                 <div class="skill-item">
                     <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
-                    <p>Comunicação</p>
+                    <p>Comunicação Clara e Técnica</p>
                 </div>
                 <div class="skill-item">
                     <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
@@ -120,7 +120,7 @@
                 </div>
                 <div class="skill-item">
                     <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
-                    <p>Inteligência Emocional</p>
+                    <p>Racíocinio Analítico e Inteligência Emocional</p>
                 </div>
             </div>
         </div>
@@ -130,24 +130,24 @@
             <div class="skill-row">
                 <div class="skill-item">
                     <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
-                    <p>HTML/CSS/JavaScript</p>
+                    <p>Excel/Power BI (nível básico)</p>
                 </div>
                 <div class="skill-item">
                     <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
-                    <p>Phyton (iniciando)/PostgreSql</p>
+                    <p>Análise de dados (em desenvolvimento)</p>
                 </div>
             </div>
             <div class="skill-row single-item-center">
                 <div class="skill-item">
                     <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
-                    <p>Excel/Power BI (básico)</p>
+                    <p>Fundamentos de HTML/CSS/Javascript</p>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="about-me-text-container">
-        <p>Sou um profissional dedicado e apaixonado por tecnologia, com uma busca constante por novos desafios e aprendizados. Minha jornada tem sido marcada pelo desenvolvimento de soluções criativas e eficientes, sempre com foco em aprimorar minhas habilidades e contribuir positivamente para os projetos em que atuo. Acredito no poder da colaboração e na importância de uma comunicação clara para alcançar objetivos ambiciosos.</p>
+        <p>Sou um universitário de Engenharia de Produção dedicado e curioso, com forte interesse por tecnologia, operações industriais e soluções logísticas. Acredito no poder da colaboração e na importância de uma comunicação clara para alcançar objetivos ambiciosos.</p>
     </div>
 </section>
 
