--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="action-button sidebar-button" onclick="location.href='#page1'" data-lang-key="homeSidebarButton">Home</button>
             <button class="action-button sidebar-button" onclick="location.href='#page2'" data-lang-key="educationSidebarButton">Educação</button>
             <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeSidebarButton">Sobre mim</button>
-               <button class="action-button" onclick="window.open('Bernardo-curriculo.pdf', '_blank')" data-lang-key="curriculumButton">
+               <button class="action-button" onclick="window.open('Bernardo-Curriculo.pdf', '_blank')" data-lang-key="curriculumButton">
   Currículo
 </button>
             <button class="action-button sidebar-button" onclick="window.location.href='projetos.html'" data-lang-key="projectsSidebarButton">Projetos</button>
@@ -58,7 +58,7 @@
                 </div>
                 
                 <div class="button-container" id="mainButtons">
-                    <button class="action-button" onclick="window.open('Bernardo-curriculo.pdf', '_blank')" data-lang-key="curriculumButton">
+                    <button class="action-button" onclick="window.open('Bernardo-Curriculo.pdf', '_blank')" data-lang-key="curriculumButton">
   Currículo
 </button>
 
