Implementação do primeiro projeto na seção de projetos do portifolio.

--- a/index.html
+++ b/index.html
@@ -27,16 +27,15 @@
             <button class="action-button sidebar-button" onclick="location.href='#page1'" data-lang-key="homeSidebarButton">Home</button>
             <button class="action-button sidebar-button" onclick="location.href='#page2'" data-lang-key="educationSidebarButton">Educação</button>
             <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeSidebarButton">Sobre mim</button>
-               <button class="action-button" onclick="window.open('Bernardo-Curriculo.pdf', '_blank')" data-lang-key="curriculumButton">
-  Currículo
-</button>
-            <button class="action-button sidebar-button" onclick="window.location.href='projetos.html'" data-lang-key="projectsSidebarButton">Projetos</button>
-        </div>
+            <button class="action-button" onclick="window.open('Bernardo-Curriculo.pdf', '_blank')" data-lang-key="curriculumButton">
+                Currículo
+            </button>
+            </div>
     </aside>
 
     <section id="page1" class="page-section">
         <div id="languageSelector" class="language-selector">
-            </div>
+        </div>
         <div class="image-container">
             <img src="image/pexels-ben-n-370982170-15112875.jpg" alt="Imagem de fundo do portfólio com elementos de engenharia e design.">
             <div class="image-text">
@@ -44,10 +43,10 @@
                 <span class="name" data-lang-key="name">BERNARDO PARANHOS</span>
                 <span class="role" data-lang-key="role">Engenheiro de Produção Graduando</span>
                 <span class="keywords" data-lang-key="keywords">SISTEMAS | ENGENHARIA | OPERAÇÕES | OFFSHORE</span>
-                <div class="social-icons">                   
+                <div class="social-icons">                
                     <a href="https://www.linkedin.com/in/bernardo-paranhos/" target="_blank" aria-label="Ver perfil do LinkedIn">
                         <svg width="45px" height="45px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M18.72 3.99997H5.37C5.19793 3.99191 5.02595 4.01786 4.86392 4.07635C4.70189 4.13484 4.55299 4.22471 4.42573 4.34081C4.29848 4.45692 4.19537 4.59699 4.12232 4.75299C4.04927 4.909 4.00770 5.07788 4 5.24997V18.63C4.01008 18.9901 4.15766 19.3328 4.41243 19.5875C4.66720 19.8423 5.00984 19.9899 5.37 20H18.72C19.0701 19.9844 19.4002 19.8322 19.6395 19.5761C19.8788 19.32 20.0082 18.9804 20 18.63V5.24997C20.0029 5.08247 19.9715 4.91616 19.9078 4.76122C19.8441 4.60629 19.7494 4.466 19.6295 4.34895C19.5097 4.23191 19.3672 4.14059 19.2108 4.08058C19.0544 4.02057 18.8874 3.99314 18.72 3.99997ZM9 17.34H6.67V10.21H9V17.34ZM7.89 9.12997C7.72741 9.13564 7.56540 9.10762 7.41416 9.04768C7.26291 8.98774 7.12569 8.89717 7.01113 8.78166C6.89656 8.66615 6.80711 8.52820 6.74841 8.37647C6.68970 8.22474 6.66301 8.06251 6.67 7.89997C6.66281 7.73567 6.69004 7.57169 6.74995 7.41854C6.80986 7.26538 6.90112 7.12644 7.01787 7.01063C7.13463 6.89481 7.27430 6.80468 7.42793 6.74602C7.58157 6.68735 7.74577 6.66145 7.91 6.66997C8.07259 6.66431 8.23460 6.69232 8.38584 6.75226C8.53709 6.81220 8.67431 6.90277 8.78887 7.01828C8.90344 7.13379 8.99289 7.27174 9.05159 7.42347C9.11030 7.57520 9.13699 7.73743 9.13 7.89997C9.13719 8.06427 9.10996 8.22825 9.05005 8.38140C8.99014 8.53456 8.89888 8.67350 8.78213 8.78931C8.66537 8.90513 8.52570 8.99526 8.37207 9.05392C8.21843 9.11259 8.05423 9.13849 7.89 9.12997ZM17.34 17.34H15V13.44C15 12.51 14.67 11.87 13.84 11.87C13.5822 11.8722 13.3313 11.9541 13.1219 12.1045C12.9124 12.2549 12.7546 12.4664 12.67 12.71C12.6050 12.8926 12.5778 13.0865 12.59 13.28V17.34H10.29V10.21H12.59V11.21C12.7945 10.8343 13.0988 10.5225 13.4694 10.3089C13.8400 10.0954 14.2624 9.98848 14.69 9.99997C16.2 9.99997 17.34 11 17.34 13.13V17.34Z" fill="white"/>
+                            <path d="M18.72 3.99997H5.37C5.19793 3.99191 5.02595 4.01786 4.86392 4.07635C4.70189 4.13484 4.55299 4.22471 4.42573 4.34081C4.29848 4.45692 4.19537 4.59699 4.12232 4.75299C4.04927 4.909 4.00770 5.07788 4 5.24997V18.63C4.01008 18.9901 4.15766 19.3328 4.41243 19.5875C4.66720 19.8423 5.00984 19.9899 5.37 20H18.72C19.0701 19.9844 19.4002 19.8322 19.6395 19.5761C19.8788 19.32 20.0082 18.9804 20 18.63V5.24997C20.0029 5.08247 19.9715 4.91616 19.9078 4.76122C19.8441 4.60629 19.7494 4.466 19.6295 4.34895C19.5097 4.23191 19.3672 4.14059 19.2108 4.08058C19.0544 4.02057 18.8874 3.99314 18.72 3.99997ZM9 17.34H6.67V10.21H9V17.34ZM7.89 9.12997C7.72741 9.13564 7.56540 9.10762 7.41416 9.04768C7.26291 8.98774 7.12569 8.89717 7.01113 8.78166C6.89656 8.66615 6.80711 8.52820 6.74841 8.37647C6.68970 8.22474 6.66301 8.06251 6.67 7.89997C6.66281 7.73567 6.69004 7.57169 6.74995 7.41854C6.80986 7.26538 6.90112 7.12644 7.01787 7.01063C7.13463 6.89481 7.27430 6.80468 7.42793 6.74602C7.58157 6.68735 7.74577 6.66145 7.91 6.66997C8.07259 6.66431 8.23460 6.69232 8.38584 6.75226C8.53709 6.81220 8.67431 6.90277 8.78887 7.01828C8.90344 7.13379 8.99289 7.27174 9.05159 7.42347C9.11030 7.57520 9.13699 7.73743 9.13 7.89997C9.13719 8.06427 9.10996 8.22825 9.05005 8.38140C8.99014 8.53456 8.89888 8.67350 8.78213 8.78931C8.66537 8.90513 8.52570 8.99526 8.37207 9.05392C8.21843 9.11259 8.05423 9.13849 7.89 9.12997ZM17.34 17.34H15V13.44C15 12.51 14.67 11.87 13.84 11.87C13.5822 11.8722 13.3313 11.9541 13.1219 12.1045C12.9124 12.2549 12.7546 12.4664 12.67 12.71C12.6050 12.8926 12.5778 13.0865 12.59 13.28V17.34H10.29V11.21C12.7945 10.8343 13.0988 10.5225 13.4694 10.3089C13.8400 10.0954 14.2624 9.98848 14.69 9.99997C16.2 9.99997 17.34 11 17.34 13.13V17.34Z" fill="white"/>
                         </svg>
                     </a>
                     <a href="https://github.com/bernardoparanhos?tab=repositories" target="_blank" aria-label="Ver perfil do GitHub">
@@ -59,9 +58,8 @@
                 
                 <div class="button-container" id="mainButtons">
                     <button class="action-button" onclick="window.open('Bernardo-Curriculo.pdf', '_blank')" data-lang-key="curriculumButton">
-  Currículo
-</button>
-
+                        Currículo
+                    </button>
                     <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeButton">Sobre mim</button>
                     <button class="action-button" onclick="window.location.href='projetos.html'" data-lang-key="projectsButton">Projetos</button>
                 </div>
