--- a/projetos.html
+++ b/projetos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Portfólio</title>
+    <title data-lang-key="projectsPageTitle">Página de Portfólio</title>
     <link rel="stylesheet" href="projetos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,31 +12,55 @@
 <body>
 
     <header class="header">
-        <h1 class="header-name">Bernardo Paranhos</h1>
-        <p class="header-projects">Projetos</p>
+        <h1 class="header-name" data-lang-key="name">Bernardo Paranhos</h1>
+        <p class="header-projects" data-lang-key="projectsHeaderTitle">Projetos</p>
     </header>
 
+      <div class="language-selector">
+        <button class="globe-button" id="language-toggle">
+            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="10"/>
+                <path d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"/>
+                <path d="M2 12h20"/>
+            </svg>
+        </button>
+        <div class="language-dropdown" id="language-dropdown">
+            <button class="lang-option" data-lang="pt">
+                <img src="image/icons/brazil-flag.svg" alt="Bandeira do Brasil">
+                Português
+            </button>
+            <button class="lang-option" data-lang="en">
+                <img src="image/icons/uk-flag.svg" alt="Bandeira do Reino Unido">
+                English
+            </button>
+            <button class="lang-option" data-lang="es">
+                <img src="image/icons/spain-flag.svg" alt="Bandeira da Espanha">
+                Español
+            </button>
+        </div>
+    </div>
+
     <main class="main-content">
-                        <a href="index.html" class="header-button">Voltar à Página Inicial</a>
+        <a href="index.html" class="header-button" data-lang-key="backButton">Voltar à Página Inicial</a>
 
         <section class="project-card">
             <div class="project-text-content">
-    <h2 class="project-title">Giro Literário</h2>
-    <p class="project-description">
-        Embora apresentado como uma estante virtual, o conceito pode ser facilmente aplicado a outros sistemas, processos e ideias que exigem organização e acesso eficiente a informações. 
-        O projeto demonstra habilidades em estruturação e otimização de dados, com frontend em HTML, CSS e JavaScript, backend em Node.js/Express e integração com MongoDB Atlas. 
-        Inclui pesquisa inteligente, endpoints REST e design responsivo, destacando a construção de uma solução completa e funcional.
-    </p>
-</div>
-
-           <div class="project-media-content">
-    <a href="https://giroliterario-website.onrender.com/" target="_blank">
-        <img src="image/Captura de tela 2025-08-29 143936.png" alt="Foto do projeto Estante Virtual" class="project-image">
-    </a>
-    <a href="https://giroliterario-website.onrender.com/" target="_blank" class="project-link">Acessar Projeto</a>
-</div>
+                <h2 class="project-title" data-lang-key="giroLiterarioTitle">Giro Literário</h2>
+                <p class="project-description" data-lang-key="giroLiterarioDescription">
+                    Embora apresentado como uma estante virtual, o conceito pode ser facilmente aplicado a outros sistemas, processos e ideias que exigem organização e acesso eficiente a informações. 
+                    O projeto demonstra habilidades em estruturação e otimização de dados, com frontend em HTML, CSS e JavaScript, backend em Node.js/Express e integração com MongoDB Atlas. 
+                    Inclui pesquisa inteligente, endpoints REST e design responsivo, destacando a construção de uma solução completa e funcional.
+                </p>
+            </div>
+            <div class="project-media-content">
+                <a href="https://giroliterario-website.onrender.com/" target="_blank">
+                    <img src="image/Captura de tela 2025-08-29 143936.png" alt="Foto do projeto Estante Virtual" class="project-image">
+                </a>
+                <a href="https://giroliterario-website.onrender.com/" target="_blank" class="project-link" data-lang-key="accessProjectLink">Acessar Projeto</a>
+            </div>
         </section>
     </main>
 
+    <script src="projetos.js"></script>
 </body>
 </html>
