feat: Atualiza e refina conteúdo das seções principais, além de atualizar o curriculo.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="action-button sidebar-button" onclick="location.href='#page1'" data-lang-key="homeSidebarButton">Home</button>
             <button class="action-button sidebar-button" onclick="location.href='#page2'" data-lang-key="educationSidebarButton">Educação</button>
             <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeSidebarButton">Sobre mim</button>
-            <button class="action-button" onclick="window.open('Bernardo-Curriculo.pdf', '_blank')" data-lang-key="curriculumButton">
+            <button class="action-button" onclick="window.open('Bernardo-Curriculo-Original.pdf', '_blank')" data-lang-key="curriculumButton">
                 Currículo
             </button>
             </div>
@@ -57,7 +57,7 @@
                 </div>
                 
                 <div class="button-container" id="mainButtons">
-                    <button class="action-button" onclick="window.open('Bernardo-Curriculo.pdf', '_blank')" data-lang-key="curriculumButton">
+                    <button class="action-button" onclick="window.open('Bernardo-Curriculo-Original.pdf', '_blank')" data-lang-key="curriculumButton">
                         Currículo
                     </button>
                     <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeButton">Sobre mim</button>
@@ -66,10 +66,10 @@
             </div>
         </div>
 
-        <div class="content-below">
-            <h1 class="welcome-heading" data-lang-key="welcomeHeading">Bem-vindo(a)!</h1>
-            <p class="welcome-text" data-lang-key="welcomeText">Olá! Seja bem-vindo(a) ao meu portfólio. Sou **Bernardo Paranhos**, graduando Engenharia de Produção com interesse nas áreass de **Sistema, Gestão, Logística e Operações Offshore**. Aqui, você encontrará um pouco da minha trajetória, apredizados e projetos. Sinta-se à vontade para explorar!</p>
-        </div>
+      <div class="content-below">
+    <h1 class="welcome-heading" data-lang-key="welcomeHeading">Bem-vindo!</h1>
+    <p class="welcome-text" data-lang-key="welcomeText">Olá! Sou <strong>Bernardo Paranhos</strong>, estudante de Engenharia de Produção focado em otimização de processos e gestão de riscos. Meu objetivo é aplicar conhecimentos em <strong>Logística, Operações Offshore e Segurança do Trabalho</strong> para criar ambientes industriais mais eficientes e seguros. Navegue pelo portfólio para conhecer meus projetos e competências.</p>
+</div>
     </section>
 
     <section id="page2" class="page-section">
@@ -145,8 +145,8 @@
         </div>
 
         <div class="about-me-text-container">
-            <p data-lang-key="aboutMeP1">Sou um universitário de Engenharia de Produção dedicado e curioso, com forte interesse por tecnologia, operações industriais e soluções logísticas. Acredito no poder da colaboração e na importância de uma comunicação clara para alcançar objetivos ambiciosos.</p>
-        </div>
+    <p data-lang-key="aboutMeP1">Como futuro Engenheiro de Produção, minha missão é resolver problemas complexos através da união entre tecnologia e processos eficientes. Tenho um foco direcionado para as áreas de <strong>Logística, Operações Offshore, Industriais e Segurança do Trabalho</strong>, onde busco aplicar meu raciocínio analítico para criar soluções que sejam não apenas produtivas, mas também seguras e sustentáveis.</p>
+</div>
     </section>
 
     <section id="page4" class="page-section">
