adiciona alguns scripts e configurações extras.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                         Currículo
                     </button>
                     <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeButton">Sobre mim</button>
-                    <button class="action-button" onclick="window.location.href='projetos.html'" data-lang-key="projectsButton">Projetos</button>
+                    <button class="action-button" onclick="window.location.href='/projetos'" data-lang-key="projectsButton">Projetos</button>
+
                 </div>
             </div>
         </div>
