ajuste no rodape.

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </section>
 
     <footer class="site-footer">
-        <p data-lang-key="footerText">&copy; 2025 Bernardo Paranhos. Todos os direitos reservados.</p>
+        <p data-lang-key="footerText">&copy; 2025 Bernardo Paranhos — Portfólio acadêmico. Todos os direitos reservados.</p>
     </footer>
 
     <section class="quote-banner">
