--- a/projetos.html
+++ b/projetos.html
@@ -41,7 +41,7 @@
     </div>
 
     <main class="main-content">
-        <a href="index.html" class="header-button" data-lang-key="backButton">Voltar à Página Inicial</a>
+        <a href="/" class="header-button" data-lang-key="backButton">Voltar à Página Inicial</a>
 
 
         <section class="project-card">
