--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio - Bernardo Paranhos</title>
+    <title>Bernardo Paranhos | Engenharia de Produção</title>
 
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     
