Adiciona o primeiro certificado do site.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
             </div>
         </div>
 
-        <h2 data-lang-key="coursesTitle">Cursos/Especializações</h2>
+    <h2 data-lang-key="coursesTitle">Cursos/Especializações</h2>
+<a href="image/Certificado Udemy Pacote Office.pdf" target="_blank" class="certificate-link-container">
+    <img src="image/Certificado Udemy Pacote Office.jpg" alt="Certificado de Curso">
+</a>
     </section>
 
     <section id="page3" class="page-section">
@@ -131,7 +134,7 @@
                 <div class="skill-row">
                     <div class="skill-item">
                         <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
-                        <p data-lang-key="excelPowerBI">Excel/Power BI (nível básico)</p>
+                        <p data-lang-key="excelPowerBI">Excel/Power BI (nível intermediário)</p>
                     </div>
                     <div class="skill-item">
                         <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
