Arrumando errinho do google na pesquisa.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bernardo Paranhos | Engenharia de Produção</title>
 
+    <meta name="description" content="Portfolio de um Universitário em Engenharia de Produção. Aqui você irá encontrar informações sobre projetos, habilidades, e tudo mais.">
+    
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     
     <link rel="stylesheet" href="style.css">
