reorganização do codigo e alteração em alguns textos.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span class="portfolio-title" data-lang-key="portfolioTitle">Portfólio Engenharia de Produção</span>
                 <span class="name" data-lang-key="name">BERNARDO PARANHOS</span>
                 <span class="role" data-lang-key="role">Engenheiro de Produção Graduando</span>
-                <span class="keywords" data-lang-key="keywords">SISTEMAS | ENGENHARIA | OPERAÇÕES | OFFSHORE</span>
+                <span class="keywords" data-lang-key="keywords">PROCESSOS INDUSTRIAIS | SST | TECNOLOGIA</span>
                 <div class="social-icons">                
                     <a href="https://www.linkedin.com/in/bernardo-paranhos/" target="_blank" aria-label="Ver perfil do LinkedIn">
                         <svg width="45px" height="45px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -73,7 +73,7 @@
 
       <div class="content-below">
     <h1 class="welcome-heading" data-lang-key="welcomeHeading">Bem-vindo!</h1>
-    <p class="welcome-text" data-lang-key="welcomeText">Olá! Sou <strong>Bernardo Paranhos</strong>, estudante de Engenharia de Produção focado em otimização de processos e gestão de riscos. Meu objetivo é aplicar conhecimentos em <strong>Logística, Operações Offshore e Segurança do Trabalho</strong> para criar ambientes industriais mais eficientes e seguros. Navegue pelo portfólio para conhecer meus projetos e competências.</p>
+    <p class="welcome-text" data-lang-key="welcomeText">Olá! Sou <strong>Bernardo Paranhos</strong>, estudante de Engenharia de Produção com foco em processos industriais, segurança do trabalho e melhoria contínua. Busco aplicar <strong>tecnologia e análise de dados</strong> para otimizar operações e promover ambientes de trabalho mais seguros e eficientes. Navegue pelo portfólio para conhecer meus projetos e competências.</p>
 </div>
     </section>
 
@@ -140,7 +140,7 @@
                     </div>
                     <div class="skill-item">
                         <img src="image/ChatGPT_Image_12_de_jul._de_2025__19_25_15-removebg-preview.png" alt="Ícone de Habilidade" class="skill-image">
-                        <p data-lang-key="dataAnalysis">Autocad (em desenvolvimento)</p>
+                        <p data-lang-key="dataAnalysis">Análise de dados (em desenvolvimento; power bi, python)</p>
                     </div>
                 </div>
                 <div class="skill-row single-item-center">
@@ -153,7 +153,7 @@
         </div>
 
         <div class="about-me-text-container">
-    <p data-lang-key="aboutMeP1">Como futuro Engenheiro de Produção, minha missão é resolver problemas complexos através da união entre tecnologia e processos eficientes. Tenho um foco direcionado para as áreas de <strong>Logística, Operações Offshore, Industriais e Segurança do Trabalho</strong>, onde busco aplicar meu raciocínio analítico para criar soluções que sejam não apenas produtivas, mas também seguras e sustentáveis.</p>
+    <p data-lang-key="aboutMeP1">Como futuro Engenheiro de Produção, minha missão é resolver desafios industriais por meio da integração entre tecnologia, eficiência e segurança. Tenho foco em <strong>processos industriais, segurança do trabalho e melhoria contínua</strong>, aplicando meu raciocínio analítico para desenvolver soluções produtivas, seguras e sustentáveis.</p>
 </div>
     </section>
 
