--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
         <div class="experience-details">
             <h3 data-lang-key="friellaCompany">Friella Alimentos</h3>
-            <p data-lang-key="friellaRole">Jovem Aprendiz – Auxiliar de Produção (Setor Abate)</p>
+            <p data-lang-key="friellaRole">Aprendiz – Auxiliar de Produção (Setor Abate)</p>
             <p data-lang-key="friellaActivitiesTitle">Atividades:</p>
             <p data-lang-key="friellaActivities">Apoio em linhas de produção, controle de processos e boas práticas de segurança no trabalho (área limpa).</p>
         </div>
