Ajuste do cv no site.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 
                 <div class="button-container" id="mainButtons">
-                    <button class="action-button" onclick="window.open('Bernardo Paranhos.pdf', '_blank')" data-lang-key="curriculumButton">
+                    <button class="action-button" onclick="window.open('CV BERNARDO 2026.pdf', '_blank')" data-lang-key="curriculumButton">
                         Currículo
                     </button>
                     <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeButton">Sobre mim</button>
