--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button class="action-button sidebar-button" onclick="location.href='#page1'" data-lang-key="homeSidebarButton">Home</button>
             <button class="action-button sidebar-button" onclick="location.href='#page2'" data-lang-key="educationSidebarButton">Educação</button>
             <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeSidebarButton">Sobre mim</button>
-            <button class="action-button" onclick="window.open('Bernardo Paranhos.pdf', '_blank')" data-lang-key="curriculumButton">
+            <button class="action-button" onclick="window.open('cv-bernardo-2026.pdf', '_blank')" data-lang-key="curriculumButton">
                 Currículo
             </button>
             </div>
@@ -61,7 +61,7 @@
                 </div>
                 
                 <div class="button-container" id="mainButtons">
-                    <button class="action-button" onclick="window.open('CV BERNARDO 2026.pdf', '_blank')" data-lang-key="curriculumButton">
+                    <button class="action-button" onclick="window.open('cv-bernardo-2026.pdf', '_blank')" data-lang-key="curriculumButton">
                         Currículo
                     </button>
                     <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeButton">Sobre mim</button>
