--- a/index.html
+++ b/index.html
@@ -270,11 +270,15 @@
     </svg>
     
     <svg class="footer-svg" width="40px" height="40px" viewBox="0 0 1600 1600" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <mask id="prefix__a" class="svg-mask-alpha" maskUnits="userSpaceOnUse" x="200" y="0" width="1200" height="1600">
-        <path d="M1333.25 0c36.86 0 66.75 29.885 66.75 66.75v1466.5c0 36.86-29.89 66.75-66.75 66.75H266.667c-36.819 0-66.667-29.85-66.667-66.67V866.667C200 829.848 229.848 800 266.667 800H525V466.667C525 429.848 554.848 400 591.667 400H850V66.75C850 29.885 879.885 0 916.75 0h416.5z" fill="#fff"/>
-    </mask>
-    ...
-</svg>
+            <mask id="pbi_mask" class="svg-mask-alpha" maskUnits="userSpaceOnUse" x="200" y="0" width="1200" height="1600">
+                <path d="M1333.25 0c36.86 0 66.75 29.885 66.75 66.75v1466.5c0 36.86-29.89 66.75-66.75 66.75H266.667c-36.819 0-66.667-29.85-66.667-66.67V866.667C200 829.848 229.848 800 266.667 800H525V466.667C525 429.848 554.848 400 591.667 400H850V66.75C850 29.885 879.885 0 916.75 0h416.5z" fill="#fff"/>
+            </mask>
+            <g mask="url(#pbi_mask)">
+                <path d="M1400 66.75v1466.5c0 36.86-29.89 66.75-66.75 66.75h-416.5c-36.865 0-66.75-29.89-66.75-66.75V66.75C850 29.885 879.885 0 916.75 0h416.5c36.87 0 66.75 29.885 66.75 66.75z" fill="#E6AD10"/>
+                <path d="M1075 466.667V1600H525V466.667C525 429.848 554.848 400 591.667 400h416.663c36.82 0 66.67 29.848 66.67 66.667z" fill="#F6D751"/>
+                <path d="M200 866.667v666.663c0 36.82 29.848 66.67 66.667 66.67H750V866.667C750 829.848 720.152 800 683.333 800H266.667C229.848 800 200 829.848 200 866.667z" fill="#F9E589"/>
+            </g>
+        </svg>
 </div>
 
 <footer class="site-footer">
