otimização de SEO para a palavra-chave Engenheiro Paranhos

--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Bernardo Paranhos | Engenharia de Produção e Tecnologia</title>
+    <title>Engenheiro Paranhos | Bernardo Paranhos - Engenharia de Produção</title>
 
-    <meta name="description" content="Portfolio profissional de Bernardo Paranhos, estudante de Engenharia de Produção na UTFPR. Especialista em processos industriais, SST, tecnologia e análise de dados com Power BI.">
-    <meta name="keywords" content="Bernardo Paranhos, Engenharia de Produção, UTFPR, Processos Industriais, Segurança do Trabalho, SST, Melhoria Contínua, Power BI, Excel, Tecnologia, Consultoria Industrial, Medianeira">
+    <meta name="description" content="Engenheiro Paranhos: Portfolio profissional de Bernardo Paranhos. Estudante de Engenharia de Produção na UTFPR, focado em processos industriais, SST e análise de dados.">
+    <meta name="keywords" content="Engenheiro Paranhos, Bernardo Paranhos, Engenharia de Produção, UTFPR, Processos Industriais, Segurança do Trabalho, SST, Melhoria Contínua, Power BI, Excel, Tecnologia, Consultoria Industrial, Medianeira">
     <meta name="author" content="Bernardo Paranhos">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://seusite.com.br/"> <meta property="og:type" content="website">
-    <meta property="og:url" content="https://seusite.com.br/">
-    <meta property="og:title" content="Bernardo Paranhos | Engenharia de Produção">
-    <meta property="og:description" content="Conheça meus projetos, habilidades e competências em processos industriais e segurança do trabalho.">
-    <meta property="og:image" content="https://seusite.com.br/image/pexels-ben-n-370982170-15112875.jpg">
+    
+    <link rel="canonical" href="https://engenheiroparanhos.com.br/">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://engenheiroparanhos.com.br/">
+    <meta property="og:title" content="Engenheiro Paranhos | Bernardo Paranhos">
+    <meta property="og:description" content="Conheça os projetos e competências do Engenheiro Paranhos em processos industriais e segurança do trabalho.">
+    <meta property="og:image" content="https://engenheiroparanhos.com.br/image/pexels-ben-n-370982170-15112875.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Bernardo Paranhos | Engenharia de Produção">
+    <meta name="twitter:title" content="Engenheiro Paranhos | Bernardo Paranhos">
     <meta name="twitter:description" content="Estudante de Engenharia de Produção com foco em análise de dados e processos industriais.">
 
     <script type="application/ld+json">
@@ -25,9 +28,13 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Bernardo Paranhos",
+      "alternateName": "Engenheiro Paranhos",
       "url": "https://engenheiroparanhos.com.br/",
       "jobTitle": "Estudante de Engenharia de Produção",
-      "affiliation": "UTFPR - Universidade Tecnológica Federal do Paraná",
+      "affiliation": {
+        "@type": "Organization",
+        "name": "UTFPR - Universidade Tecnológica Federal do Paraná"
+      },
       "sameAs": [
         "https://www.linkedin.com/in/bernardo-paranhos/",
         "https://github.com/bernardoparanhos"
