--- a/index.html
+++ b/index.html
@@ -62,14 +62,15 @@
         <div class="sidebar-header">
             <h3 data-lang-key="menuTitle">Menu</h3>
         </div>
-        <div class="sidebar-buttons">
-            <button class="action-button sidebar-button" onclick="location.href='#page1'" data-lang-key="homeSidebarButton">Home</button>
-            <button class="action-button sidebar-button" onclick="location.href='#page2'" data-lang-key="educationSidebarButton">Educação</button>
-            <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeSidebarButton">Sobre mim</button>
-            <button class="action-button" onclick="window.open('cv-bernardo-2026.pdf', '_blank')" data-lang-key="curriculumButton">
-                Currículo
-            </button>
-            </div>
+      <div class="sidebar-buttons">
+    <a href="#page1" class="action-button sidebar-button" data-lang-key="homeSidebarButton">Home</a>
+    <a href="#page2" class="action-button sidebar-button" data-lang-key="educationSidebarButton">Educação</a>
+    <a href="#page3" class="action-button sidebar-button" data-lang-key="aboutMeSidebarButton">Sobre mim</a>
+    
+    <button class="action-button" onclick="window.open('cv-bernardo-2026.pdf', '_blank')" data-lang-key="curriculumButton">
+        Currículo
+    </button>
+</div>
     </aside>
 
     <section id="page1" class="page-section">
@@ -113,14 +114,13 @@
 </a>
                 </div>
                 
-                <div class="button-container" id="mainButtons">
-                    <button class="action-button" onclick="window.open('cv-bernardo-2026.pdf', '_blank')" data-lang-key="curriculumButton">
-                        Currículo
-                    </button>
-                    <button class="action-button sidebar-button" onclick="location.href='#page3'" data-lang-key="aboutMeButton">Sobre mim</button>
-                    <button class="action-button" onclick="window.location.href='/projetos'" data-lang-key="projectsButton">Projetos</button>
-
-                </div>
+             <div class="button-container" id="mainButtons">
+    <button class="action-button" onclick="window.open('cv-bernardo-2026.pdf', '_blank')" data-lang-key="curriculumButton">
+        Currículo
+    </button>
+    <a href="#page3" class="action-button sidebar-button" data-lang-key="aboutMeButton">Sobre mim</a>
+    <button class="action-button" onclick="window.location.href='/projetos'" data-lang-key="projectsButton">Projetos</button>
+</div>
             </div>
         </div>
 
