Config para license MIT.

--- a/index.html
+++ b/index.html
@@ -284,7 +284,12 @@
 </div>
 
 <footer class="site-footer" itemscope itemtype="https://schema.org/WPFooter">
-    <p data-lang-key="footerText">&copy; 2025 Bernardo Paranhos — Portfólio acadêmico em Engenharia de Produção. Todos os direitos reservados.</p>
+    <p data-lang-key="footerText">
+        &copy; 2026 Bernardo Paranhos — Portfólio acadêmico. 
+        <a href="https://github.com/bernardoparanhos/portfolio/blob/main/LICENSE" target="_blank" class="footer-license-link">
+            Licenciado sob MIT
+        </a>
+    </p>
 </footer>
 
 <section class="quote-banner">
