--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     }
     </script>
 
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="favicon1.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
